# mkt-research

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
Commodities/: CLAUDE.md  pyproject.toml  sample_report_1M.txt
Commodities/commodities/: contracts.py  curve_carry.py  features.py  labels.py  macro_controls.py  market_data.py  mean_reversion.py  models.py  momentum.py  positioning.py  ranking.py  report.py  risk_reward_adapter.py  seasonality.py  trend_adapter.py  universe.py  validation.py
Commodities/tests/: test_curve_carry.py  test_features.py  test_labels.py  test_market_data.py  test_mean_reversion.py  test_models.py  test_momentum.py  test_seasonality.py  test_universe.py  test_validation.py
Crypto/: CLAUDE.md  crypto_analysis.py  pyproject.toml
Crypto/crypto_structure/: crypto_gauge.py  fib_extension.py  indicators.py  levels.py  market_data.py  relative_strength.py  report.py  risk_reward.py  stop_target.py  trend_rr.py  trend_violation.py  trendlines.py  universe.py
Crypto/tests/: test_crypto_gauge.py  test_fib_extension.py  test_indicators.py  test_levels.py  test_market_data.py  test_relative_strength.py  test_report.py  test_risk_reward.py  test_stop_target.py  test_trend_rr.py  test_trend_violation.py  test_trendlines.py  test_universe.py
Equities/: CLAUDE.md
Equities/equity-rotation/: CLAUDE.md  pyproject.toml
Equities/equity-rotation/equity_rotation/: market_data.py  relative_strength.py  relative_technicals.py  report.py  rotation_ranking.py  trend_regression.py  universe.py
Equities/equity-rotation/tests/: test_market_data.py  test_relative_strength.py  test_relative_technicals.py  test_report.py  test_rotation_ranking.py  test_trend_regression.py  test_universe.py
Macro/Rates/: CLAUDE.md  pyproject.toml
Macro/Rates/rates_macro/: cross_reference.py  fred_client.py  macro_score.py  market_data.py  red_zone.py  regime.py  report.py  trend_rr.py
Macro/Rates/tests/: test_cross_reference.py  test_fred_client.py  test_macro_score.py  test_market_data.py  test_red_zone.py  test_regime.py  test_report.py  test_trend_rr.py
Macro/market-structure/: CLAUDE.md  pyproject.toml
Macro/market-structure/market_structure/: fib_extension.py  indicators.py  levels.py  macro_gauge.py  market_data.py  report.py  risk_reward.py  stop_target.py  trend_violation.py  trendlines.py  universe.py
Macro/market-structure/tests/: test_fib_extension.py  test_indicators.py  test_levels.py  test_macro_gauge.py  test_market_data.py  test_report.py  test_risk_reward.py  test_stop_target.py  test_trend_violation.py  test_trendlines.py  test_universe.py
docs/superpowers/plans/: 2026-07-18-outlook-report-tool-and-commodities-speedup.md
docs/superpowers/specs/: 2026-07-18-outlook-report-tool-and-commodities-speedup-design.md
server/: index.js  index.test.js
skills/commodities-research/: SKILL.md
skills/crypto-research/: SKILL.md
skills/equity-research/: SKILL.md
skills/industry-research/: SKILL.md
skills/industry-research/references/Communications Services/: Interactive Media & Internet Services.md  Media.md  Telecommunications.md
skills/macro-research/: SKILL.md
skills/market-outlook/: SKILL.md
(+36 files in other folders)
