[project]
name = "commodities"
version = "0.1.0"
description = "Statistical ranking + forecasting module for the commodity futures universe (energy, metals, agriculture, livestock): calibrated up-probability, expected return, downside quantile, and cross-commodity relative strength, wired to the reused market-structure trend/risk-reward engines"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "market-structure",
    "rates-macro",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
market-structure = { path = "../Macro/market-structure", editable = true }
rates-macro = { path = "../Macro/Rates", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
