[project]
name = "crypto-structure"
version = "0.1.0"
description = "Risk:reward + trendline-discovery toolkit for the crypto market: per-asset structural stop/target/R:R, trend-violation detection, peer/benchmark relative-strength (leadership + opportunity) ranking, and a market-wide risk gauge"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
