[project]
name = "equity-rotation"
version = "0.1.0"
description = "Sector- and factor-rotation toolkit for the US equity universe: relative-strength leadership/opportunity ranking, Pareto-dominance filtering, and RRG-style relative-technicals quadrant reads. Self-contained (no cross-domain dependency on Macro/Rates)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
