[project]
name = "rates-macro"
version = "0.1.0"
description = "FRED + yfinance macro/rates analysis toolkit: HY credit, rates, USD vs S&P trend and mean-reversion"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
