[project]
name = "market-structure"
version = "0.1.0"
description = "Risk:reward + trendline-discovery toolkit for index/ETF universes: per-ticker structural stop/target/R:R, trend-violation detection, and a cross-index macro bullishness + cash-on-sidelines gauge"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "yfinance>=0.2.40",
    "rates-macro",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
rates-macro = { path = "../Rates", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
